# ttnn-helloworld-cpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pch.hpp  ttnn-hello.cpp
dependencies/: CMakeLists.txt
